--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -66,7 +66,9 @@ logging:
   level:
     org:
       springframework: ERROR
-
+springdoc:
+  api-docs:
+    path: /api-docs
 ---
 spring:
   profiles:
